update support library version to 23.4.0 and build gradle

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,8 +22,16 @@
         android:id="@+id/main_text_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AA"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_margin="8dp"
+        tools:text="AA" />
+
+    <Button
+        android:id="@+id/main_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="CLICK ME" />
 
 </LinearLayout>
